# rust-logger

./: .gitignore  .stignore  Dockerfile  README.md  docker-compose.yml
elastic/: Cargo.toml  Dockerfile  docker-compose.yml
elastic/src/: main.rs
opentel/: docker-compose jager and otel-collector.yml  docker-compose.yml  otel-collector-config.yaml
simpletel/: Cargo.toml  docker-compose.yml
src/: main.rs
