[package]
name = "simpletel"
version = "0.0.1"
edition = "2021"
description = "simple rust app demo for opentel"
license = "MIT OR Apache-2.0"

[dependencies]
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version="0.12.0",  features = ["tonic", "metrics"] }
opentelemetry-semantic-conventions = { version="0.11.0" }
tokio = { version = "1.0", features = ["full"] }
rand = "0.8.5"



